deploy/metric-info-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrics-demo
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metric-demo
  template:
    metadata:
      labels:
        app: metric-demo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metrics-demo
        image: https://quay.io/repository/brice/metrics-demo
        ports:
        - containerPort: 3000
