deploy/metric-info-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-demo
  namespace: dev
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metrics-demo
